added poetry.toml, added data/ on local repository, model loading successful

--- a/azrt2021/exploring.ipynb
+++ b/azrt2021/exploring.ipynb
@@ -4,18 +4,47 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d103f7cf",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import torch\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from pathlib import Path\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.metrics import roc_curve, auc, precision_recall_curve, confusion_matrix\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# Add project to path if needed\n",
+    "import sys\n",
+    "sys.path.insert(0, '/home/lucas/dev/voice_models')\n",
+    "\n",
+    "# Import custom modules\n",
+    "from azrt2021.model import Model\n",
+    "from azrt2021.tcn import TCN\n",
+    "from azrt2021.mfcc import MFCC_Extractor\n",
+    "from preprocess_audio import load_audio_file\n",
+    "from azrt2021.misc import calc_performance_metrics, show_performance_metrics\n",
+    "\n",
+    "# Set device\n",
+    "device = 'cpu'\n",
+    "print(f\"Using device: {device}\")\n",
+    "\n",
+    "# Set random seeds for reproducibility\n",
+    "np.random.seed(42)\n",
+    "torch.manual_seed(42)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "voice-models-py3.12",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
